# erogeDOTS

./: .gitignore  README.md  configuration.nix  flake.nix  hardware-configuration.nix  home.nix  install.sh
config/fastfetch/: config.jsonc
config/foot/: foot.ini
config/fuzzel/: config.ini
config/niri/: config.kdl
config/nvim/lua/config/: autocmds.lua  keymaps.lua  options.lua
config/waybar/: config.jsonc  style.css
config/waybar/scripts/: fcitx5-cycle.sh  fcitx5-status.sh
config/ytfzf/: config.sh
docs/: DEVELOPMENT.md  SESSION-SUMMARY.md
home/: moni.nix
home/modules/: desktop.nix  terminal.nix
hosts/NixChan/: configuration.nix  hardware-configuration.nix
modules/nixos/: i18n.nix
picker-rs/: Cargo.toml
picker-rs/src/: main.rs
pkgs/catnap/: default.nix
pkgs/theme-picker/: default.nix
scripts/: battery-alert  theme-switch  tspick
shells/: common.nix  docker.nix  full.nix  go.nix  python.nix  rust.nix  security.nix  tester.nix
themes/harumi/: theme.conf
themes/nanami/: theme.conf
themes/natsume/: theme.conf
themes/nene/: theme.conf
themes/templates/alacritty/: alacritty.toml
themes/templates/catnap/: config.cat
themes/templates/fastfetch/: config.jsonc
themes/templates/foot/: foot.ini
themes/templates/fuzzel/: config.ini
themes/templates/ghostty/: config
themes/templates/kitty/: kitty.conf
themes/templates/niri/: config.kdl
themes/templates/swaync/: config.json  style.css
themes/templates/waybar/: config.jsonc  style.css
